# smartfactory-monitor

./: .env  .env.example  PROJECT_STRUCTURE.md  docker-compose.yml  pyproject.toml  smartfactory.db
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: websocket.py
app/api/v1/: router.py  sensors.py
app/core/: database.py  security.py
app/models/: sensor.py
app/schemas/: sensor.py
app/services/: alert_service.py  anomaly_service.py  sensor_service.py
app/tasks/: detection_tasks.py
docker/: Dockerfile  Dockerfile.worker
mnt/user-data/outputs/smartfactory/app/schemas/: sensor.py
scripts/: simulate_mqtt.py
tests/: conftest.py
tests/integration/: test_sensors_api.py
