[tool.poetry]
name = "smartfactory-monitor"
version = "0.1.0"
description = "Real-time industrial sensor monitoring system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.4"}
celery = {extras = ["redis"], version = "^5.4.0"}
pandas = "^2.2.2"
numpy = "^1.26.4"
httpx = "^0.27.0"
selenium = "^4.21.0"
playwright = "^1.44.0"
paho-mqtt = "^2.0.0"
python-telegram-bot = "^21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"